Terms and FAQ tabs: fix layout so content has a readable width

--- a/src/components/UI/FullScreenContainer/FullScreenContainer.module.scss
+++ b/src/components/UI/FullScreenContainer/FullScreenContainer.module.scss
@@ -27,8 +27,13 @@ $shadow-color: $--color-black;
     padding: 0 100px;
   }
 
+  & > * {
+    margin: 0 auto;
+    max-width: 1070px;
+  }
+
   &.mobile {
-    padding: 0 20px;
+    padding: 0 40px;
   }
 
   a {
