--- a/src/routes/Terms/Terms.module.scss
+++ b/src/routes/Terms/Terms.module.scss
@@ -1,14 +1,6 @@
 @import '../../index';
 
 .terms {
-  padding-left: inherit;
-  padding-right: inherit;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  overflow: auto;
   line-height: 1.7;
 
   b {
